<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>casadi_ament</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eieioeiji0501@gmail.com">f11</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gfortran</build_depend>

  <depend>liblapack-dev</depend>
  <depend>coinor-libipopt-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
